# DIAL

./: AUTHORS  ChangeLog  Makefile.in  README.md  configure  configure.ac
src/: DIAL  Makefile  Makefile.am  Makefile.in  assemble.c  assemble1.c  assemble_illumina.c  build_sff_index.c  cluster.c  cluster.h  common.c  common.h  config.h  config.h.in  contig.c  contig.h  convertFastqFasta  cull_components.c  filter.c  filter_clusters.c  fish_clusters.c  graph.c  graph.h  hashtable.c  hashtable.h  maf.c  maf.h  make_template.c  masker.c  mfblocks.c  mfblocks.h  partition  remove_clones  remove_clusters.c  sequences.c  sequences.h  sff.c  sff.h  sff_index.c  sff_index.h  (+9 more)
src/.deps/: assemble.Po  assemble1.Po  assemble_illumina.Po  build_sff_index.Po  cluster.Po  common.Po  contig.Po  cull_components.Po  filter.Po  filter_clusters.Po  fish_clusters.Po  graph.Po  hashtable.Po  maf.Po  make_template.Po  masker.Po  mfblocks.Po  remove_clusters.Po  sequences.Po  sff.Po  sff_index.Po  slinklist.Po  splayhash.Po  update.Po  update_clusters.Po  utilities.Po
test_data/: run454_test.bash  runillumina_test.bash
